parser.output
Terminals unused in grammar

    '='
    '<'
    '>'
    '#'
    '+'
    '-'
    '*'
    '/'


State 89 conflicts: 8 shift/reduce
State 92 conflicts: 14 shift/reduce
State 121 conflicts: 8 shift/reduce
State 122 conflicts: 8 shift/reduce
State 124 conflicts: 14 shift/reduce
State 125 conflicts: 14 shift/reduce
State 126 conflicts: 14 shift/reduce


Grammar

    0 $accept: program $end

    1 program: func_def

    2 func_def: "def" header ":" definition_list stmt_list "end"

    3 definition_list: %empty
    4                | func_def definition_list
    5                | func_decl definition_list
    6                | var_def definition_list

    7 header: T_id "(" formal_list ")"
    8       | type T_id "(" formal_list ")"

    9 formal: type id_list
   10       | "ref" type id_list

   11 formal_list: %empty
   12            | formal
   13            | formal ";" formal_list

   14 type: "int"
   15     | "bool"
   16     | "char"
   17     | type "[" "]"
   18     | "list" "[" type "]"

   19 func_decl: "decl" header

   20 id_list: T_id "," id_list
   21        | T_id

   22 var_def: type id_list

   23 elsif_list: %empty
   24           | "elsif" expr ":" stmt_list elsif_list

   25 else: %empty
   26     | "else" ":" stmt_list

   27 stmt: simple
   28     | "exit"
   29     | "return" expr
   30     | "if" expr ":" stmt_list elsif_list else "end"
   31     | "for" simple_list ";" expr ";" simple_list ":" stmt_list "end"

   32 stmt_list: stmt stmt_list
   33          | stmt

   34 simple: "skip"
   35       | atom ":=" expr
   36       | call

   37 simple_list: simple
   38            | simple "," simple_list

   39 expr_list: %empty
   40          | expr
   41          | expr "," expr_list

   42 call: T_id "(" expr_list ")"

   43 atom: T_id
   44     | T_string
   45     | atom "[" expr "]"
   46     | call

   47 plus_or_minus: "+"
   48              | "-"

   49 arithmetic_operator: "+"
   50                    | "-"
   51                    | "*"
   52                    | "/"
   53                    | "mod"

   54 relational_operator: "="
   55                    | "<>"
   56                    | ">"
   57                    | "<"
   58                    | ">="
   59                    | "<="

   60 expr: atom
   61     | T_int_const
   62     | T_char_const
   63     | "(" expr ")"
   64     | plus_or_minus expr
   65     | expr arithmetic_operator expr
   66     | expr relational_operator expr
   67     | "true"
   68     | "false"
   69     | "not" expr
   70     | expr "and" expr
   71     | expr "or" expr
   72     | "new" type "[" expr "]"
   73     | "nil"
   74     | "nil?" "(" expr ")"
   75     | expr "#" expr
   76     | "head" "(" expr ")"
   77     | "tail" "(" expr ")"


Terminals, with rules where they appear

    $end (0) 0
    '#' (35)
    '*' (42)
    '+' (43)
    '-' (45)
    '/' (47)
    '<' (60)
    '=' (61)
    '>' (62)
    error (256)
    "and" (258) 70
    "bool" (259) 15
    "char" (260) 16
    "decl" (261) 19
    "def" (262) 2
    "else" (263) 26
    "elsif" (264) 24
    "end" (265) 2 30 31
    "exit" (266) 28
    "false" (267) 68
    "for" (268) 31
    "head" (269) 76
    "if" (270) 30
    "int" (271) 14
    "list" (272) 18
    "mod" (273) 53
    "new" (274) 72
    "nil" (275) 73
    "nil?" (276) 74
    "not" (277) 69
    "or" (278) 71
    "ref" (279) 10
    "return" (280) 29
    "skip" (281) 34
    "tail" (282) 77
    "true" (283) 67
    "<=" (284) 59
    ">=" (285) 58
    "<>" (286) 55
    "=" (287) 54
    "<" (288) 57
    ">" (289) 56
    ":=" (290) 35
    ":" (291) 2 24 26 30 31
    "(" (292) 7 8 42 63 74 76 77
    ")" (293) 7 8 42 63 74 76 77
    "[" (294) 17 18 45 72
    "]" (295) 17 18 45 72
    ";" (296) 13 31
    "," (297) 20 38 41
    "+" (298) 47 49
    "-" (299) 48 50
    "*" (300) 51
    "/" (301) 52
    "#" (302) 75
    T_id <var> (303) 7 8 20 21 42 43
    T_int_const <num> (304) 61
    T_char_const <num> (305) 62
    T_string <name> (306) 44


Nonterminals, with rules where they appear

    $accept (60)
        on left: 0
    program (61)
        on left: 1
        on right: 0
    func_def (62)
        on left: 2
        on right: 1 4
    definition_list (63)
        on left: 3 4 5 6
        on right: 2 4 5 6
    header (64)
        on left: 7 8
        on right: 2 19
    formal (65)
        on left: 9 10
        on right: 12 13
    formal_list (66)
        on left: 11 12 13
        on right: 7 8 13
    type (67)
        on left: 14 15 16 17 18
        on right: 8 9 10 17 18 22 72
    func_decl (68)
        on left: 19
        on right: 5
    id_list (69)
        on left: 20 21
        on right: 9 10 20 22
    var_def (70)
        on left: 22
        on right: 6
    elsif_list (71)
        on left: 23 24
        on right: 24 30
    else (72)
        on left: 25 26
        on right: 30
    stmt (73)
        on left: 27 28 29 30 31
        on right: 32 33
    stmt_list (74)
        on left: 32 33
        on right: 2 24 26 30 31 32
    simple (75)
        on left: 34 35 36
        on right: 27 37 38
    simple_list (76)
        on left: 37 38
        on right: 31 38
    expr_list (77)
        on left: 39 40 41
        on right: 41 42
    call (78)
        on left: 42
        on right: 36 46
    atom (79)
        on left: 43 44 45 46
        on right: 35 45 60
    plus_or_minus (80)
        on left: 47 48
        on right: 64
    arithmetic_operator (81)
        on left: 49 50 51 52 53
        on right: 65
    relational_operator (82)
        on left: 54 55 56 57 58 59
        on right: 66
    expr (83)
        on left: 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
        on right: 24 29 30 31 35 40 41 45 63 64 65 66 69 70 71 72 74 75 76 77


State 0

    0 $accept: . program $end

    "def"  shift, and go to state 1

    program   go to state 2
    func_def  go to state 3


State 1

    2 func_def: "def" . header ":" definition_list stmt_list "end"

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7
    T_id    shift, and go to state 8

    header  go to state 9
    type    go to state 10


State 2

    0 $accept: program . $end

    $end  shift, and go to state 11


State 3

    1 program: func_def .

    $default  reduce using rule 1 (program)


State 4

   15 type: "bool" .

    $default  reduce using rule 15 (type)


State 5

   16 type: "char" .

    $default  reduce using rule 16 (type)


State 6

   14 type: "int" .

    $default  reduce using rule 14 (type)


State 7

   18 type: "list" . "[" type "]"

    "["  shift, and go to state 12


State 8

    7 header: T_id . "(" formal_list ")"

    "("  shift, and go to state 13


State 9

    2 func_def: "def" header . ":" definition_list stmt_list "end"

    ":"  shift, and go to state 14


State 10

    8 header: type . T_id "(" formal_list ")"
   17 type: type . "[" "]"

    "["   shift, and go to state 15
    T_id  shift, and go to state 16


State 11

    0 $accept: program $end .

    $default  accept


State 12

   18 type: "list" "[" . type "]"

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7

    type  go to state 17


State 13

    7 header: T_id "(" . formal_list ")"

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7
    "ref"   shift, and go to state 18

    $default  reduce using rule 11 (formal_list)

    formal       go to state 19
    formal_list  go to state 20
    type         go to state 21


State 14

    2 func_def: "def" header ":" . definition_list stmt_list "end"

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "decl"  shift, and go to state 22
    "def"   shift, and go to state 1
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7

    $default  reduce using rule 3 (definition_list)

    func_def         go to state 23
    definition_list  go to state 24
    type             go to state 25
    func_decl        go to state 26
    var_def          go to state 27


State 15

   17 type: type "[" . "]"

    "]"  shift, and go to state 28


State 16

    8 header: type T_id . "(" formal_list ")"

    "("  shift, and go to state 29


State 17

   17 type: type . "[" "]"
   18     | "list" "[" type . "]"

    "["  shift, and go to state 15
    "]"  shift, and go to state 30


State 18

   10 formal: "ref" . type id_list

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7

    type  go to state 31


State 19

   12 formal_list: formal .
   13            | formal . ";" formal_list

    ";"  shift, and go to state 32

    $default  reduce using rule 12 (formal_list)


State 20

    7 header: T_id "(" formal_list . ")"

    ")"  shift, and go to state 33


State 21

    9 formal: type . id_list
   17 type: type . "[" "]"

    "["   shift, and go to state 15
    T_id  shift, and go to state 34

    id_list  go to state 35


State 22

   19 func_decl: "decl" . header

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7
    T_id    shift, and go to state 8

    header  go to state 36
    type    go to state 10


State 23

    4 definition_list: func_def . definition_list

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "decl"  shift, and go to state 22
    "def"   shift, and go to state 1
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7

    $default  reduce using rule 3 (definition_list)

    func_def         go to state 23
    definition_list  go to state 37
    type             go to state 25
    func_decl        go to state 26
    var_def          go to state 27


State 24

    2 func_def: "def" header ":" definition_list . stmt_list "end"

    "exit"    shift, and go to state 38
    "for"     shift, and go to state 39
    "if"      shift, and go to state 40
    "return"  shift, and go to state 41
    "skip"    shift, and go to state 42
    T_id      shift, and go to state 43
    T_string  shift, and go to state 44

    stmt       go to state 45
    stmt_list  go to state 46
    simple     go to state 47
    call       go to state 48
    atom       go to state 49


State 25

   17 type: type . "[" "]"
   22 var_def: type . id_list

    "["   shift, and go to state 15
    T_id  shift, and go to state 34

    id_list  go to state 50


State 26

    5 definition_list: func_decl . definition_list

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "decl"  shift, and go to state 22
    "def"   shift, and go to state 1
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7

    $default  reduce using rule 3 (definition_list)

    func_def         go to state 23
    definition_list  go to state 51
    type             go to state 25
    func_decl        go to state 26
    var_def          go to state 27


State 27

    6 definition_list: var_def . definition_list

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "decl"  shift, and go to state 22
    "def"   shift, and go to state 1
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7

    $default  reduce using rule 3 (definition_list)

    func_def         go to state 23
    definition_list  go to state 52
    type             go to state 25
    func_decl        go to state 26
    var_def          go to state 27


State 28

   17 type: type "[" "]" .

    $default  reduce using rule 17 (type)


State 29

    8 header: type T_id "(" . formal_list ")"

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7
    "ref"   shift, and go to state 18

    $default  reduce using rule 11 (formal_list)

    formal       go to state 19
    formal_list  go to state 53
    type         go to state 21


State 30

   18 type: "list" "[" type "]" .

    $default  reduce using rule 18 (type)


State 31

   10 formal: "ref" type . id_list
   17 type: type . "[" "]"

    "["   shift, and go to state 15
    T_id  shift, and go to state 34

    id_list  go to state 54


State 32

   13 formal_list: formal ";" . formal_list

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7
    "ref"   shift, and go to state 18

    $default  reduce using rule 11 (formal_list)

    formal       go to state 19
    formal_list  go to state 55
    type         go to state 21


State 33

    7 header: T_id "(" formal_list ")" .

    $default  reduce using rule 7 (header)


State 34

   20 id_list: T_id . "," id_list
   21        | T_id .

    ","  shift, and go to state 56

    $default  reduce using rule 21 (id_list)


State 35

    9 formal: type id_list .

    $default  reduce using rule 9 (formal)


State 36

   19 func_decl: "decl" header .

    $default  reduce using rule 19 (func_decl)


State 37

    4 definition_list: func_def definition_list .

    $default  reduce using rule 4 (definition_list)


State 38

   28 stmt: "exit" .

    $default  reduce using rule 28 (stmt)


State 39

   31 stmt: "for" . simple_list ";" expr ";" simple_list ":" stmt_list "end"

    "skip"    shift, and go to state 42
    T_id      shift, and go to state 43
    T_string  shift, and go to state 44

    simple       go to state 57
    simple_list  go to state 58
    call         go to state 48
    atom         go to state 49


State 40

   30 stmt: "if" . expr ":" stmt_list elsif_list else "end"

    "false"       shift, and go to state 59
    "head"        shift, and go to state 60
    "new"         shift, and go to state 61
    "nil"         shift, and go to state 62
    "nil?"        shift, and go to state 63
    "not"         shift, and go to state 64
    "tail"        shift, and go to state 65
    "true"        shift, and go to state 66
    "("           shift, and go to state 67
    "+"           shift, and go to state 68
    "-"           shift, and go to state 69
    T_id          shift, and go to state 43
    T_int_const   shift, and go to state 70
    T_char_const  shift, and go to state 71
    T_string      shift, and go to state 44

    call           go to state 72
    atom           go to state 73
    plus_or_minus  go to state 74
    expr           go to state 75


State 41

   29 stmt: "return" . expr

    "false"       shift, and go to state 59
    "head"        shift, and go to state 60
    "new"         shift, and go to state 61
    "nil"         shift, and go to state 62
    "nil?"        shift, and go to state 63
    "not"         shift, and go to state 64
    "tail"        shift, and go to state 65
    "true"        shift, and go to state 66
    "("           shift, and go to state 67
    "+"           shift, and go to state 68
    "-"           shift, and go to state 69
    T_id          shift, and go to state 43
    T_int_const   shift, and go to state 70
    T_char_const  shift, and go to state 71
    T_string      shift, and go to state 44

    call           go to state 72
    atom           go to state 73
    plus_or_minus  go to state 74
    expr           go to state 76


State 42

   34 simple: "skip" .

    $default  reduce using rule 34 (simple)


State 43

   42 call: T_id . "(" expr_list ")"
   43 atom: T_id .

    "("  shift, and go to state 77

    $default  reduce using rule 43 (atom)


State 44

   44 atom: T_string .

    $default  reduce using rule 44 (atom)


State 45

   32 stmt_list: stmt . stmt_list
   33          | stmt .

    "exit"    shift, and go to state 38
    "for"     shift, and go to state 39
    "if"      shift, and go to state 40
    "return"  shift, and go to state 41
    "skip"    shift, and go to state 42
    T_id      shift, and go to state 43
    T_string  shift, and go to state 44

    $default  reduce using rule 33 (stmt_list)

    stmt       go to state 45
    stmt_list  go to state 78
    simple     go to state 47
    call       go to state 48
    atom       go to state 49


State 46

    2 func_def: "def" header ":" definition_list stmt_list . "end"

    "end"  shift, and go to state 79


State 47

   27 stmt: simple .

    $default  reduce using rule 27 (stmt)


State 48

   36 simple: call .
   46 atom: call .

    ":="      reduce using rule 46 (atom)
    "["       reduce using rule 46 (atom)
    $default  reduce using rule 36 (simple)


State 49

   35 simple: atom . ":=" expr
   45 atom: atom . "[" expr "]"

    ":="  shift, and go to state 80
    "["   shift, and go to state 81


State 50

   22 var_def: type id_list .

    $default  reduce using rule 22 (var_def)


State 51

    5 definition_list: func_decl definition_list .

    $default  reduce using rule 5 (definition_list)


State 52

    6 definition_list: var_def definition_list .

    $default  reduce using rule 6 (definition_list)


State 53

    8 header: type T_id "(" formal_list . ")"

    ")"  shift, and go to state 82


State 54

   10 formal: "ref" type id_list .

    $default  reduce using rule 10 (formal)


State 55

   13 formal_list: formal ";" formal_list .

    $default  reduce using rule 13 (formal_list)


State 56

   20 id_list: T_id "," . id_list

    T_id  shift, and go to state 34

    id_list  go to state 83


State 57

   37 simple_list: simple .
   38            | simple . "," simple_list

    ","  shift, and go to state 84

    $default  reduce using rule 37 (simple_list)


State 58

   31 stmt: "for" simple_list . ";" expr ";" simple_list ":" stmt_list "end"

    ";"  shift, and go to state 85


State 59

   68 expr: "false" .

    $default  reduce using rule 68 (expr)


State 60

   76 expr: "head" . "(" expr ")"

    "("  shift, and go to state 86


State 61

   72 expr: "new" . type "[" expr "]"

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7

    type  go to state 87


State 62

   73 expr: "nil" .

    $default  reduce using rule 73 (expr)


State 63

   74 expr: "nil?" . "(" expr ")"

    "("  shift, and go to state 88


State 64

   69 expr: "not" . expr

    "false"       shift, and go to state 59
    "head"        shift, and go to state 60
    "new"         shift, and go to state 61
    "nil"         shift, and go to state 62
    "nil?"        shift, and go to state 63
    "not"         shift, and go to state 64
    "tail"        shift, and go to state 65
    "true"        shift, and go to state 66
    "("           shift, and go to state 67
    "+"           shift, and go to state 68
    "-"           shift, and go to state 69
    T_id          shift, and go to state 43
    T_int_const   shift, and go to state 70
    T_char_const  shift, and go to state 71
    T_string      shift, and go to state 44

    call           go to state 72
    atom           go to state 73
    plus_or_minus  go to state 74
    expr           go to state 89


State 65

   77 expr: "tail" . "(" expr ")"

    "("  shift, and go to state 90


State 66

   67 expr: "true" .

    $default  reduce using rule 67 (expr)


State 67

   63 expr: "(" . expr ")"

    "false"       shift, and go to state 59
    "head"        shift, and go to state 60
    "new"         shift, and go to state 61
    "nil"         shift, and go to state 62
    "nil?"        shift, and go to state 63
    "not"         shift, and go to state 64
    "tail"        shift, and go to state 65
    "true"        shift, and go to state 66
    "("           shift, and go to state 67
    "+"           shift, and go to state 68
    "-"           shift, and go to state 69
    T_id          shift, and go to state 43
    T_int_const   shift, and go to state 70
    T_char_const  shift, and go to state 71
    T_string      shift, and go to state 44

    call           go to state 72
    atom           go to state 73
    plus_or_minus  go to state 74
    expr           go to state 91


State 68

   47 plus_or_minus: "+" .

    $default  reduce using rule 47 (plus_or_minus)


State 69

   48 plus_or_minus: "-" .

    $default  reduce using rule 48 (plus_or_minus)


State 70

   61 expr: T_int_const .

    $default  reduce using rule 61 (expr)


State 71

   62 expr: T_char_const .

    $default  reduce using rule 62 (expr)


State 72

   46 atom: call .

    $default  reduce using rule 46 (atom)


State 73

   45 atom: atom . "[" expr "]"
   60 expr: atom .

    "["  shift, and go to state 81

    $default  reduce using rule 60 (expr)


State 74

   64 expr: plus_or_minus . expr

    "false"       shift, and go to state 59
    "head"        shift, and go to state 60
    "new"         shift, and go to state 61
    "nil"         shift, and go to state 62
    "nil?"        shift, and go to state 63
    "not"         shift, and go to state 64
    "tail"        shift, and go to state 65
    "true"        shift, and go to state 66
    "("           shift, and go to state 67
    "+"           shift, and go to state 68
    "-"           shift, and go to state 69
    T_id          shift, and go to state 43
    T_int_const   shift, and go to state 70
    T_char_const  shift, and go to state 71
    T_string      shift, and go to state 44

    call           go to state 72
    atom           go to state 73
    plus_or_minus  go to state 74
    expr           go to state 92


State 75

   30 stmt: "if" expr . ":" stmt_list elsif_list else "end"
   65 expr: expr . arithmetic_operator expr
   66     | expr . relational_operator expr
   70     | expr . "and" expr
   71     | expr . "or" expr
   75     | expr . "#" expr

    "and"  shift, and go to state 93
    "mod"  shift, and go to state 94
    "or"   shift, and go to state 95
    "<="   shift, and go to state 96
    ">="   shift, and go to state 97
    "<>"   shift, and go to state 98
    "="    shift, and go to state 99
    "<"    shift, and go to state 100
    ">"    shift, and go to state 101
    ":"    shift, and go to state 102
    "+"    shift, and go to state 103
    "-"    shift, and go to state 104
    "*"    shift, and go to state 105
    "/"    shift, and go to state 106
    "#"    shift, and go to state 107

    arithmetic_operator  go to state 108
    relational_operator  go to state 109


State 76

   29 stmt: "return" expr .
   65 expr: expr . arithmetic_operator expr
   66     | expr . relational_operator expr
   70     | expr . "and" expr
   71     | expr . "or" expr
   75     | expr . "#" expr

    "and"  shift, and go to state 93
    "mod"  shift, and go to state 94
    "or"   shift, and go to state 95
    "<="   shift, and go to state 96
    ">="   shift, and go to state 97
    "<>"   shift, and go to state 98
    "="    shift, and go to state 99
    "<"    shift, and go to state 100
    ">"    shift, and go to state 101
    "+"    shift, and go to state 103
    "-"    shift, and go to state 104
    "*"    shift, and go to state 105
    "/"    shift, and go to state 106
    "#"    shift, and go to state 107

    $default  reduce using rule 29 (stmt)

    arithmetic_operator  go to state 108
    relational_operator  go to state 109


State 77

   42 call: T_id "(" . expr_list ")"

    "false"       shift, and go to state 59
    "head"        shift, and go to state 60
    "new"         shift, and go to state 61
    "nil"         shift, and go to state 62
    "nil?"        shift, and go to state 63
    "not"         shift, and go to state 64
    "tail"        shift, and go to state 65
    "true"        shift, and go to state 66
    "("           shift, and go to state 67
    "+"           shift, and go to state 68
    "-"           shift, and go to state 69
    T_id          shift, and go to state 43
    T_int_const   shift, and go to state 70
    T_char_const  shift, and go to state 71
    T_string      shift, and go to state 44

    $default  reduce using rule 39 (expr_list)

    expr_list      go to state 110
    call           go to state 72
    atom           go to state 73
    plus_or_minus  go to state 74
    expr           go to state 111


State 78

   32 stmt_list: stmt stmt_list .

    $default  reduce using rule 32 (stmt_list)


State 79

    2 func_def: "def" header ":" definition_list stmt_list "end" .

    $default  reduce using rule 2 (func_def)


State 80

   35 simple: atom ":=" . expr

    "false"       shift, and go to state 59
    "head"        shift, and go to state 60
    "new"         shift, and go to state 61
    "nil"         shift, and go to state 62
    "nil?"        shift, and go to state 63
    "not"         shift, and go to state 64
    "tail"        shift, and go to state 65
    "true"        shift, and go to state 66
    "("           shift, and go to state 67
    "+"           shift, and go to state 68
    "-"           shift, and go to state 69
    T_id          shift, and go to state 43
    T_int_const   shift, and go to state 70
    T_char_const  shift, and go to state 71
    T_string      shift, and go to state 44

    call           go to state 72
    atom           go to state 73
    plus_or_minus  go to state 74
    expr           go to state 112


State 81

   45 atom: atom "[" . expr "]"

    "false"       shift, and go to state 59
    "head"        shift, and go to state 60
    "new"         shift, and go to state 61
    "nil"         shift, and go to state 62
    "nil?"        shift, and go to state 63
    "not"         shift, and go to state 64
    "tail"        shift, and go to state 65
    "true"        shift, and go to state 66
    "("           shift, and go to state 67
    "+"           shift, and go to state 68
    "-"           shift, and go to state 69
    T_id          shift, and go to state 43
    T_int_const   shift, and go to state 70
    T_char_const  shift, and go to state 71
    T_string      shift, and go to state 44

    call           go to state 72
    atom           go to state 73
    plus_or_minus  go to state 74
    expr           go to state 113


State 82

    8 header: type T_id "(" formal_list ")" .

    $default  reduce using rule 8 (header)


State 83

   20 id_list: T_id "," id_list .

    $default  reduce using rule 20 (id_list)


State 84

   38 simple_list: simple "," . simple_list

    "skip"    shift, and go to state 42
    T_id      shift, and go to state 43
    T_string  shift, and go to state 44

    simple       go to state 57
    simple_list  go to state 114
    call         go to state 48
    atom         go to state 49


State 85

   31 stmt: "for" simple_list ";" . expr ";" simple_list ":" stmt_list "end"

    "false"       shift, and go to state 59
    "head"        shift, and go to state 60
    "new"         shift, and go to state 61
    "nil"         shift, and go to state 62
    "nil?"        shift, and go to state 63
    "not"         shift, and go to state 64
    "tail"        shift, and go to state 65
    "true"        shift, and go to state 66
    "("           shift, and go to state 67
    "+"           shift, and go to state 68
    "-"           shift, and go to state 69
    T_id          shift, and go to state 43
    T_int_const   shift, and go to state 70
    T_char_const  shift, and go to state 71
    T_string      shift, and go to state 44

    call           go to state 72
    atom           go to state 73
    plus_or_minus  go to state 74
    expr           go to state 115


State 86

   76 expr: "head" "(" . expr ")"

    "false"       shift, and go to state 59
    "head"        shift, and go to state 60
    "new"         shift, and go to state 61
    "nil"         shift, and go to state 62
    "nil?"        shift, and go to state 63
    "not"         shift, and go to state 64
    "tail"        shift, and go to state 65
    "true"        shift, and go to state 66
    "("           shift, and go to state 67
    "+"           shift, and go to state 68
    "-"           shift, and go to state 69
    T_id          shift, and go to state 43
    T_int_const   shift, and go to state 70
    T_char_const  shift, and go to state 71
    T_string      shift, and go to state 44

    call           go to state 72
    atom           go to state 73
    plus_or_minus  go to state 74
    expr           go to state 116


State 87

   17 type: type . "[" "]"
   72 expr: "new" type . "[" expr "]"

    "["  shift, and go to state 117


State 88

   74 expr: "nil?" "(" . expr ")"

    "false"       shift, and go to state 59
    "head"        shift, and go to state 60
    "new"         shift, and go to state 61
    "nil"         shift, and go to state 62
    "nil?"        shift, and go to state 63
    "not"         shift, and go to state 64
    "tail"        shift, and go to state 65
    "true"        shift, and go to state 66
    "("           shift, and go to state 67
    "+"           shift, and go to state 68
    "-"           shift, and go to state 69
    T_id          shift, and go to state 43
    T_int_const   shift, and go to state 70
    T_char_const  shift, and go to state 71
    T_string      shift, and go to state 44

    call           go to state 72
    atom           go to state 73
    plus_or_minus  go to state 74
    expr           go to state 118


State 89

   65 expr: expr . arithmetic_operator expr
   66     | expr . relational_operator expr
   69     | "not" expr .
   70     | expr . "and" expr
   71     | expr . "or" expr
   75     | expr . "#" expr

    "mod"  shift, and go to state 94
    "<="   shift, and go to state 96
    ">="   shift, and go to state 97
    "<>"   shift, and go to state 98
    "="    shift, and go to state 99
    "<"    shift, and go to state 100
    ">"    shift, and go to state 101
    "+"    shift, and go to state 103
    "-"    shift, and go to state 104
    "*"    shift, and go to state 105
    "/"    shift, and go to state 106
    "#"    shift, and go to state 107

    "="       [reduce using rule 69 (expr)]
    "<"       [reduce using rule 69 (expr)]
    ">"       [reduce using rule 69 (expr)]
    "+"       [reduce using rule 69 (expr)]
    "-"       [reduce using rule 69 (expr)]
    "*"       [reduce using rule 69 (expr)]
    "/"       [reduce using rule 69 (expr)]
    "#"       [reduce using rule 69 (expr)]
    $default  reduce using rule 69 (expr)

    arithmetic_operator  go to state 108
    relational_operator  go to state 109


State 90

   77 expr: "tail" "(" . expr ")"

    "false"       shift, and go to state 59
    "head"        shift, and go to state 60
    "new"         shift, and go to state 61
    "nil"         shift, and go to state 62
    "nil?"        shift, and go to state 63
    "not"         shift, and go to state 64
    "tail"        shift, and go to state 65
    "true"        shift, and go to state 66
    "("           shift, and go to state 67
    "+"           shift, and go to state 68
    "-"           shift, and go to state 69
    T_id          shift, and go to state 43
    T_int_const   shift, and go to state 70
    T_char_const  shift, and go to state 71
    T_string      shift, and go to state 44

    call           go to state 72
    atom           go to state 73
    plus_or_minus  go to state 74
    expr           go to state 119


State 91

   63 expr: "(" expr . ")"
   65     | expr . arithmetic_operator expr
   66     | expr . relational_operator expr
   70     | expr . "and" expr
   71     | expr . "or" expr
   75     | expr . "#" expr

    "and"  shift, and go to state 93
    "mod"  shift, and go to state 94
    "or"   shift, and go to state 95
    "<="   shift, and go to state 96
    ">="   shift, and go to state 97
    "<>"   shift, and go to state 98
    "="    shift, and go to state 99
    "<"    shift, and go to state 100
    ">"    shift, and go to state 101
    ")"    shift, and go to state 120
    "+"    shift, and go to state 103
    "-"    shift, and go to state 104
    "*"    shift, and go to state 105
    "/"    shift, and go to state 106
    "#"    shift, and go to state 107

    arithmetic_operator  go to state 108
    relational_operator  go to state 109


State 92

   64 expr: plus_or_minus expr .
   65     | expr . arithmetic_operator expr
   66     | expr . relational_operator expr
   70     | expr . "and" expr
   71     | expr . "or" expr
   75     | expr . "#" expr

    "and"  shift, and go to state 93
    "mod"  shift, and go to state 94
    "or"   shift, and go to state 95
    "<="   shift, and go to state 96
    ">="   shift, and go to state 97
    "<>"   shift, and go to state 98
    "="    shift, and go to state 99
    "<"    shift, and go to state 100
    ">"    shift, and go to state 101
    "+"    shift, and go to state 103
    "-"    shift, and go to state 104
    "*"    shift, and go to state 105
    "/"    shift, and go to state 106
    "#"    shift, and go to state 107

    "and"     [reduce using rule 64 (expr)]
    "mod"     [reduce using rule 64 (expr)]
    "or"      [reduce using rule 64 (expr)]
    "<="      [reduce using rule 64 (expr)]
    ">="      [reduce using rule 64 (expr)]
    "<>"      [reduce using rule 64 (expr)]
    "="       [reduce using rule 64 (expr)]
    "<"       [reduce using rule 64 (expr)]
    ">"       [reduce using rule 64 (expr)]
    "+"       [reduce using rule 64 (expr)]
    "-"       [reduce using rule 64 (expr)]
    "*"       [reduce using rule 64 (expr)]
    "/"       [reduce using rule 64 (expr)]
    "#"       [reduce using rule 64 (expr)]
    $default  reduce using rule 64 (expr)

    arithmetic_operator  go to state 108
    relational_operator  go to state 109


State 93

   70 expr: expr "and" . expr

    "false"       shift, and go to state 59
    "head"        shift, and go to state 60
    "new"         shift, and go to state 61
    "nil"         shift, and go to state 62
    "nil?"        shift, and go to state 63
    "not"         shift, and go to state 64
    "tail"        shift, and go to state 65
    "true"        shift, and go to state 66
    "("           shift, and go to state 67
    "+"           shift, and go to state 68
    "-"           shift, and go to state 69
    T_id          shift, and go to state 43
    T_int_const   shift, and go to state 70
    T_char_const  shift, and go to state 71
    T_string      shift, and go to state 44

    call           go to state 72
    atom           go to state 73
    plus_or_minus  go to state 74
    expr           go to state 121


State 94

   53 arithmetic_operator: "mod" .

    $default  reduce using rule 53 (arithmetic_operator)


State 95

   71 expr: expr "or" . expr

    "false"       shift, and go to state 59
    "head"        shift, and go to state 60
    "new"         shift, and go to state 61
    "nil"         shift, and go to state 62
    "nil?"        shift, and go to state 63
    "not"         shift, and go to state 64
    "tail"        shift, and go to state 65
    "true"        shift, and go to state 66
    "("           shift, and go to state 67
    "+"           shift, and go to state 68
    "-"           shift, and go to state 69
    T_id          shift, and go to state 43
    T_int_const   shift, and go to state 70
    T_char_const  shift, and go to state 71
    T_string      shift, and go to state 44

    call           go to state 72
    atom           go to state 73
    plus_or_minus  go to state 74
    expr           go to state 122


State 96

   59 relational_operator: "<=" .

    $default  reduce using rule 59 (relational_operator)


State 97

   58 relational_operator: ">=" .

    $default  reduce using rule 58 (relational_operator)


State 98

   55 relational_operator: "<>" .

    $default  reduce using rule 55 (relational_operator)


State 99

   54 relational_operator: "=" .

    $default  reduce using rule 54 (relational_operator)


State 100

   57 relational_operator: "<" .

    $default  reduce using rule 57 (relational_operator)


State 101

   56 relational_operator: ">" .

    $default  reduce using rule 56 (relational_operator)


State 102

   30 stmt: "if" expr ":" . stmt_list elsif_list else "end"

    "exit"    shift, and go to state 38
    "for"     shift, and go to state 39
    "if"      shift, and go to state 40
    "return"  shift, and go to state 41
    "skip"    shift, and go to state 42
    T_id      shift, and go to state 43
    T_string  shift, and go to state 44

    stmt       go to state 45
    stmt_list  go to state 123
    simple     go to state 47
    call       go to state 48
    atom       go to state 49


State 103

   49 arithmetic_operator: "+" .

    $default  reduce using rule 49 (arithmetic_operator)


State 104

   50 arithmetic_operator: "-" .

    $default  reduce using rule 50 (arithmetic_operator)


State 105

   51 arithmetic_operator: "*" .

    $default  reduce using rule 51 (arithmetic_operator)


State 106

   52 arithmetic_operator: "/" .

    $default  reduce using rule 52 (arithmetic_operator)


State 107

   75 expr: expr "#" . expr
